# key-value-storage

./: CMakeLists.txt  README.md  task.md
client-app/: CMakeLists.txt  main_client.cpp
server-app/: CMakeLists.txt  main_server.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp
src/core/: CMakeLists.txt  ClientId.cpp  ClientId.hpp  Command.cpp  Command.hpp  Core.cpp  Core.hpp  Key.cpp  Key.hpp  Value.cpp  Value.hpp
src/protocol/: CMakeLists.txt  ConsoleProtocolReader.cpp  ConsoleProtocolReader.hpp  FileProtocolReader.cpp  FileProtocolReader.hpp  IProtocolReader.hpp  ParsingUtils.cpp  ParsingUtils.hpp  ProtocolException.cpp  ProtocolException.hpp
src/server/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.hpp  DelHandler.cpp  DelHandler.hpp  GetHandler.cpp  GetHandler.hpp  ICommandHandler.hpp  Server.cpp  Server.hpp  SetHandler.cpp  SetHandler.hpp
src/storage/: CMakeLists.txt  DiscStorage.cpp  DiscStorage.hpp  IStorage.hpp  MemoryStorage.cpp  MemoryStorage.hpp  StorageException.cpp  StorageException.hpp
tests/: CMakeLists.txt  parsingTest.cpp  test.cpp  testCommand.cpp
tests/protocolTest/: parsingTest.cpp  testParsing.cpp
tests/typesTest/: testClientId.cpp
